# biasops-sdk

./: .gitignore  CLAUDE.md  README.md  demo.ipynb  pyproject.toml
.github/workflows/: ci.yml
biasops/: __init__.py  adapter.py  artifact.py  biasops.py  cli.py  evaluator.py
biasops/policies/: POLICIES_VERSION  colorado_ai_act_hiring.yaml  eeoc_title7_hiring_disparate_impact.yaml  eu_ai_act_high_risk_system.yaml  illinois_hb3773.yaml  nyc_local_law_144.yaml
tests/: test_adapter.py  test_artifact.py  test_e2e.py  test_evaluator.py
